--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/mattn/go-isatty"
   version = "0.0.3"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/kballard/go-shellquote"
