dep ensure -add github.com/dustin/go-humanize

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/kballard/go-shellquote"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/dustin/go-humanize"
