Supply current build version as ldflag.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: go
 sudo: false
 go:
-- 1.10.x
+  - 1.10.x
 go_import_path: github.com/sourcegraph/src-cli
 install:
-- go get -d -t ./...
-- go test -i ./...
-- go get -u github.com/mitchellh/gox
-- mkdir release
-- cd release && gox -arch 'amd64' -os 'linux windows darwin' ../cmd/...
+  - go get -d -t ./...
+  - go test -i ./...
+  - go get -u github.com/mitchellh/gox
+  - mkdir release
+  - cd release && gox -ldflags="-X 'main.buildTag=`git describe --tags`'" -arch 'amd64' -os 'linux windows darwin' ../cmd/...
 script:
-- cd $TRAVIS_BUILD_DIR
-- go test -race -v ./...
+  - cd $TRAVIS_BUILD_DIR
+  - go test -race -v ./...
 deploy:
   provider: releases
   api_key:
