Fix current git tag detection in travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - go test -i ./...
   - go get -u github.com/mitchellh/gox
   - mkdir release
-  - cd release && gox -ldflags="-X 'main.buildTag=`git describe --tags`'" -arch 'amd64' -os 'linux windows darwin' ../cmd/...
+  - cd release && gox -ldflags="-X 'main.buildTag=`git tag --contains $(git rev-parse HEAD) | grep -v latest | tail -1`'" -arch 'amd64' -os 'linux windows darwin' ../cmd/...
 script:
   - cd $TRAVIS_BUILD_DIR
   - go test -race -v ./...
