--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,56 +1,33 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
-# before:
-#   hooks:
-#     # you may remove this if you don't use vgo
-#     - go mod tidy
-#     # you may remove this if you don't need go generate
-#     - go generate ./...
-# builds:
-# - env:
-#   - CGO_ENABLED=0
-# archives:
-# - replacements:
-#     darwin: Darwin
-#     linux: Linux
-#     windows: Windows
-#     386: i386
-#     amd64: x86_64
-# checksum:
-#   name_template: 'checksums.txt'
-# snapshot:
-#   name_template: "{{ .Tag }}-next"
-# changelog:
-#   sort: asc
-#   filters:
-#     exclude:
-#     - '^docs:'
-#     - '^test:'
-#
+dist: release
+env:
+  - GO111MODULE=on
+before:
+  hooks:
+    - go mod download
+    - go mod tidy
+builds:
+-
+  main: ./cmd/src/
+  binary: src
+  ldflags:
+    - -X main.build={{.Version}}
+  goos:
+    - linux
+    - windows
+    - darwin
+  goarch:
+    - amd64
+  env:
+  - CGO_ENABLED=0
 brews:
   -
-    # Name template of the recipe
-    # Default to project name
     name: src-cli
-
+    homepage: "https://sourcegraph.com/"
+    description: "Sourcegraph CLI"
     github:
       owner: sourcegraph
       name: homebrew-src-cli
-
-    # Git author used to commit to the repository.
-    # Defaults are shown.
-    commit_author:
-      name: goreleaserbot
-      email: goreleaser@carlosbecker.com
-
     # Folder inside the repository to put the formula.
     # Default is the root folder.
     folder: Formula
 
-    # Your app's homepage.
-    # Default is empty.
-    homepage: "https://sourcegraph.com/"
-
-    # Your app's description.
-    # Default is empty.
-    description: "Sourcegraph CLI"
