--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,11 @@ builds:
     - darwin
   goarch:
     - amd64
+archives:
+- id: bin
+  format: binary
+  wrap_in_directory: false
+  name_template: "src_{{ .Os }}_{{ .Arch }}"
 brews:
   -
     name: src-cli
@@ -29,3 +34,9 @@ brews:
     # Folder inside the repository to put the formula.
     # Default is the root folder.
     folder: Formula
+changelog:
+  sort: asc
+  filters:
+    exclude:
+    - '^docs:'
+    - '^test:'
