Create tarballs with goreleaser for Homebrew formula

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,6 +19,8 @@ builds:
   goarch:
     - amd64
 archives:
+- id: tarball
+  format: tar.gz
 - id: bin
   format: binary
   wrap_in_directory: false
