--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,8 +42,8 @@ dockers:
     - src
     image_templates:
     - "sourcegraph/src-cli:{{ .Tag }}"
-    - "sourcegraph/src-cli:v{{ .Major }}"
-    - "sourcegraph/src-cli:v{{ .Major }}.{{ .Minor }}"
+    - "sourcegraph/src-cli:{{ .Major }}"
+    - "sourcegraph/src-cli:{{ .Major }}.{{ .Minor }}"
     - "sourcegraph/src-cli:latest"
 changelog:
   sort: asc
