One more attempt, use different GOPATH
Apparently Go 1.14.3 is installed by default:
https://www.appveyor.com/docs/windows-images-software/#golang

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: "{build}"
 clone_folder: c:\gopath\src\github.com\sourcegraph\src-cli
 environment:
-  GOPATH: c:\gopath
+  GOPATH: c:\go
 stack: go 1.14.3
 install:
   - set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
