--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -5,14 +5,17 @@ on:
 
 jobs:
   go-test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.14.x, 1.15.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
-      - run: go get -d -t ./...
+          go-version: ${{ matrix.go-version }}
       - run: go test -i ./...
       - run: go test -race -v ./...
