Temporary enable build on all pushes for testing.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,10 +5,11 @@ name: Publish Docker image dependencies
 # We only want to build on releases; this condition is 100% stolen from the
 # goreleaser action.
 on:
-  push:
-    tags:
-      - "*"
-      - "!latest"
+  - push
+  # push:
+  #   tags:
+  #     - "*"
+  #     - "!latest"
 
 jobs:
   publish:
