Only build the Docker image on tag push.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,11 +5,10 @@ name: Publish Docker image dependencies
 # We only want to build on releases; this condition is 100% stolen from the
 # goreleaser action.
 on:
-  - push
-  # push:
-  #   tags:
-  #     - "*"
-  #     - "!latest"
+  push:
+    tags:
+      - "*"
+      - "!latest"
 
 jobs:
   publish:
