--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,8 +21,13 @@ jobs:
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: arm64
+
       - name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
+        run: docker buildx ls
 
       - run: ./docker/campaign-volume-workspace/push.py -d ./docker/campaign-volume-workspace/Dockerfile -i sourcegraph/src-campaign-volume-workspace
         env:
