--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,9 +17,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # We need buildx to be able to build a multi-architecture image.
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v1
 
+      # We also need QEMU, since this is running on an AMD64 host and we want to
+      # build ARM64 images.
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
