--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,16 +31,14 @@ brews:
     name: src-cli
     homepage: "https://sourcegraph.com/"
     description: "Sourcegraph CLI"
-    github:
+    tap:
       owner: sourcegraph
       name: homebrew-src-cli
     # Folder inside the repository to put the formula.
     # Default is the root folder.
     folder: Formula
 dockers:
-  - binaries:
-    - src
-    image_templates:
+  - image_templates:
     - "sourcegraph/src-cli:{{ .Tag }}"
     - "sourcegraph/src-cli:{{ .Major }}"
     - "sourcegraph/src-cli:{{ .Major }}.{{ .Minor }}"
