Dockerfile: split release and dev recipes
Combined with the new documentation, this should make it easier to test
Renovate PRs like #455 in the future without changing any actual
behaviour.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,6 +38,7 @@ brews:
     # Default is the root folder.
     folder: Formula
 dockers:
+  - dockerfile: Dockerfile.release
   - image_templates:
     - "sourcegraph/src-cli:{{ .Tag }}"
     - "sourcegraph/src-cli:{{ .Major }}"
