Fix release version.

--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -7,5 +7,5 @@ FROM sourcegraph/alpine:3.12@sha256:133a0a767b836cf86a011101995641cf1b5cbefb3dd2
 # needed for `src lsif upload` and `src actions exec`
 RUN apk add --no-cache git
 
-COPY --from=builder /src/src /usr/bin/
+COPY src /usr/bin/
 ENTRYPOINT ["/usr/bin/src"]
