Fix ioutil rule in golangci-lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,7 +22,7 @@ linters-settings:
     packages-with-error-message:
       - errors: 'Use github.com/cockroachdb/errors instead'
       - github.com/pkg/errors: 'Use github.com/cockroachdb/errors instead'
-      - ioutil: 'The ioutil package has been deprecated'
+      - io/ioutil: 'The ioutil package has been deprecated'
   gocritic:
     disabled-checks:
       - appendAssign # Too many false positives
