--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.17.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -18,4 +18,4 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
       - run: go test -i ./...
-      - run: go test -race -v ./...
+      # - run: go test -race -v ./...
