Try to see if flake still occurs

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -17,5 +17,5 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
-      - run: go test -i ./...
-      - run: go test -race -v ./...
+      - run: go test -count=50 -i ./...
+      - run: go test -count=50 -race -v ./...
