--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,8 +20,10 @@ linters-settings:
     list-type: blacklist
     include-go-root: true
     packages-with-error-message:
-      - errors: 'Use github.com/cockroachdb/errors instead'
-      - github.com/pkg/errors: 'Use github.com/cockroachdb/errors instead'
+      - errors: 'Use github.com/sourcegraph/sourcegraph/lib/errors instead'
+      - github.com/pkg/errors: 'Use github.com/sourcegraph/sourcegraph/lib/errors instead'
+      - github.com/cockroachdb/errors: 'Use github.com/sourcegraph/sourcegraph/lib/errors instead'
+      - github.com/hashicorp/go-multierror: 'Use github.com/sourcegraph/sourcegraph/lib/errors instead'
       - io/ioutil: 'The ioutil package has been deprecated'
   gocritic:
     disabled-checks:
