--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -4,7 +4,7 @@
 # the main Dockerfile, which should have an identical second stage.
 FROM sourcegraph/alpine:3.12@sha256:ce099fbcd3cf70b338fc4cb2a4e1fa9ae847de21afdb0a849a393b87d94fb174
 
-# needed for `src lsif upload` and `src actions exec`
+# needed for `src code-intel upload` and `src actions exec`
 RUN apk add --no-cache git
 
 COPY src /usr/bin/
