Make src-cli installable via npm.
Fixes #759. Previously, the recommended way to install src-cli on Linux
was to download a static binary via `curl`. This PR makes it possible to
install src-cli via `npm install -g @sourcegraph/src`. The new npm
distribution will be particuarly helpful for users of our new
scip-typescript and scip-python indexers that are also distributed via
npm.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "go.lintTool": "golangci-lint",
   "shellformat.flag": "-i 2 -ci",
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
+  "[go]": {
+    "editor.formatOnSave": true
+  },
   "go.useLanguageServer": true,
   "gopls": {
     "local": "github.com/sourcegraph/src-cli"
