--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -35,6 +35,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
   npm:
     runs-on: ubuntu-latest
+    needs: goreleaser
     steps:
       - name: Checkout
         uses: actions/checkout@v3
