Fix silly quote bug

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -46,7 +46,7 @@ jobs:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
       - run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-      - run: echo "Releasing version ${{ env.version }}""
+      - run: echo "Releasing version ${{ env.version }}"
       - run: yarn version --no-git-tag-version --new-version "${{ env.VERSION }}"
         working-directory: npm-distribution
       - run: npm publish --access public
