Fix the regexp to extract the version from git refs
The last npm release job failed with "error Invalid version supplied."
because the inferred version was "refs/tags/3.40.6".

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
-      - run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - run: echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       - run: echo "Releasing version ${{ env.version }}"
       - run: yarn version --no-git-tag-version --new-version "${{ env.VERSION }}"
         working-directory: npm-distribution
