--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -49,7 +49,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Fetch most recent tag, latest (highest version) tag, and second latest tag
-        # TODO: to fake a patch release: echo "most_recent_tag=3.43.3" >> $GITHUB_ENV
+        # For latest and second latest tags, we can't use git tag --sort=version:refname
+        # because git doesn't have a concept of pre-release versions and thus mis-sorts
+        # versions like 4.0.0-rc.0 *after* 4.0.0.
         run: |
           echo "most_recent_tag=$(git tag --sort=taggerdate | tail -1)" >> $GITHUB_ENV
           echo "latest_tag=$(git tag | tr - \~ | sort -V | tr \~ - | tail -1)" >> $GITHUB_ENV
